--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -9,24 +9,79 @@
 }
 
 .btn__bar {
-  display: flex;
-  width: 50%;
-  justify-content: space-between;
-  margin: 0 auto;
-}
-.btn {
-  display: inline-block;
+  width: 100%;
+  margin: 0 auto 10px;
   position: relative;
+}
+
+
+.btn__bar:after{
+  content: "";
+display: block;
+position: absolute;
+z-index: 0;
+top: 10px;
+width: 100%;
+height: 1px;
+background: #DDD;
+margin-top: 5px;
+}
+
+.btn__bar span, .btn {
+  display: inline-block;
+  font-weight: bold;
+  position: relative;
+  background: white;
+  color: #777;
+  z-index: 1;
+  vertical-align: middle;
+}
+.btn__bar span {
+  top: 5px;
+  text-transform: uppercase;
+}
+
+.btn__container {
+  display: inline-block;
+  position: absolute;
+    right: 0;
+}
+@media screen and (max-width: 767px){
+  .btn__bar {
+    text-align: center;
+  }
+  .btn__container {
+    display: block;
+    position: relative;
+    margin: 20px auto 0;
+  }
+  .btn {
+    position: absolute;
+  }
+  .btn--prev { left: 10px; }
+  .btn--next { right: 10px;   border-left: 1px solid #d5d5d5; }
+}
+
+.btn {
+  font-size: 22px;
+  text-align: center;
   cursor: pointer;
-  height: 20px;
-  width: 20px;
+  height: 30px;
+  width: 30px;
 }
 .btn--prev {
-  left: 0;
+  border-top: 1px solid #d5d5d5;
+  border-left: 1px solid #d5d5d5;
+  border-right: 1px solid #d5d5d5;
+  border-bottom: 1px solid #d5d5d5;
+  border-radius: 3px 0px 0px 3px;
 }
 
 .btn--next {
-  right: 0;
+  border-top: 1px solid #d5d5d5;
+  border-right: 1px solid #d5d5d5;
+  border-bottom: 1px solid #d5d5d5;
+  border-radius: 0px 3px 3px 0px;
 }
 
 .carousel__container {
@@ -39,7 +94,7 @@
   width:200%;
   position: relative;
   left: -300px;
-  height: 300px;
+  height: 190px;
   overflow: hidden;
   left: 0;
   top: 0;
@@ -50,31 +105,70 @@
 .carousel__item {
   display: inline-block;
   vertical-align: top;
-  padding: 20px;
-  height: 300px;
+  color: #eb252e;
+  font-weight: bold;
+  padding: 10px 0;
+  height: 190px;
   width: 300px;
-  border: 1px solid black;
   list-style: none;
-  margin: 0 5px;
+  margin: 0 10px;
 }
-
-.carousel__item.active, .carousel__item.adjacent {
-
-}
-.carousel__item.active {
-  border: 1px solid red;
-}
-@media screen and (max-width: 600px){
+@media screen and (max-width: 1024px){
   .carousel__item {
-    width: 100%;
+    width: 234px;
+    margin: 0 5px;
   }
 }
+@media screen and (max-width: 767px){
+  .carousel {
+    margin: 50px 0 0;
+  }
+  .carousel__item {
+    width: 300px;
+    margin: 0 5px;
+  }
+}
+  @media screen and (max-width: 320px){
+    .carousel__item {
+      width: 250px;
+      margin: 0 5px;
+    }
+}
+.carousel__item h2{
+  text-transform: uppercase;
+
+  font-size: 12px;
+}
 
 
+
+
+.results {
+    margin-top: 10px;
+}
 .runner {
+  width: 100%;
   background-color: grey;
+  padding: 5px;
+  font-size: 12px;
   color: white;
   font-weight: 600;
+}
+.runner .name {
+  display: inline-block;
+  left: 0;
+  width: 70%;
+}
+.votes {
+  width: 30%;
+  text-align: right;
+  display: inline-block;
+  font-style: italic;
+  font-size: 12px;
+  font-weight: normal;
+}
+.votes .count {
+  font-size: 10px;
 }
 .runner.lib {
   background-color: #D71920;
